# vision-craft

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
app/: CMakeLists.txt
app/src/: main.cpp
app/src/VisionCraftApp/: CMakeLists.txt  main.cpp
app/src/VisionCraftEngine/: CMakeLists.txt  Node.cpp  NodeEditor.cpp  NodeEditor.h
src/App/: CMakeLists.txt  VisionCraftApplication.cpp  VisionCraftApplication.h  VisionCraftGUI.cpp
src/Core/: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Event.h  EventBus.h  LICENSE  Layer.h  Logger.h  README.md  Texture.cpp  Texture.h  Window.cpp  Window.h
src/Core/examples/minimal/: CMakeLists.txt  README.md  main.cpp
src/Editor/: CMakeLists.txt
src/Editor/Commands/: Command.h  CommandHistory.cpp  CommandHistory.h  ConnectionCommands.cpp  ConnectionCommands.h  NodeCommands.cpp  NodeCommands.h
src/Editor/Persistence/: RecentFilesManager.cpp  RecentFilesManager.h
src/Editor/State/: ClipboardManager.cpp  ClipboardManager.h  SelectionManager.cpp  SelectionManager.h
src/Nodes/: CMakeLists.txt
src/Nodes/Core/: EngineConstants.h  Node.cpp  Node.h  NodeData.h  NodeEditor.cpp  NodeEditor.h  Slot.cpp  Slot.h
src/Nodes/Factory/: NodeFactory.cpp  NodeFactory.h
src/UI/: CMakeLists.txt
src/UI/Canvas/: CanvasController.cpp  CanvasController.h  ConnectionManager.cpp  ConnectionManager.h  InputHandler.cpp  InputHandler.h
src/UI/Events/: FileOpenedEvent.h  GraphExecuteEvent.h  LoadGraphEvent.h  NewGraphEvent.h  SaveGraphEvent.h
src/UI/Layers/: DockSpaceLayer.cpp  DockSpaceLayer.h  GraphExecutionLayer.cpp  GraphExecutionLayer.h  NodeEditorLayer.cpp  NodeEditorLayer.h  PropertyPanelLayer.cpp  PropertyPanelLayer.h
src/UI/Rendering/: NodeDimensionCalculator.cpp  NodeDimensionCalculator.h  NodeRenderer.cpp  NodeRenderer.h
src/UI/Rendering/Strategies/: DefaultNodeRenderingStrategy.cpp  DefaultNodeRenderingStrategy.h  ImageInputNodeRenderingStrategy.cpp  NodeRenderingStrategy.h  (+3 more)
src/UI/Widgets/: ContextMenuRenderer.cpp  ContextMenuRenderer.h  DockingLayoutHelper.cpp  DockingLayoutHelper.h  FileDialogManager.cpp  FileDialogManager.h  NodeEditorConstants.h  NodeEditorTypes.h  NodeFactory.h  NodeSearchPalette.cpp  NodeSearchPalette.h
src/Vision/: CMakeLists.txt
src/Vision/Algorithms/: CannyEdgeNode.cpp  CannyEdgeNode.h  CvtColorNode.cpp  CvtColorNode.h  GrayscaleNode.cpp  GrayscaleNode.h  MedianBlurNode.cpp  MedianBlurNode.h  MergeChannelsNode.cpp  MergeChannelsNode.h  MorphologyNode.cpp  MorphologyNode.h  ResizeNode.cpp  ResizeNode.h  SobelNode.cpp  SobelNode.h  SplitChannelsNode.cpp  SplitChannelsNode.h  ThresholdNode.cpp  ThresholdNode.h
src/Vision/Factory/: NodeFactory.cpp  NodeFactory.h
src/Vision/IO/: ImageInputNode.cpp  ImageInputNode.h  ImageOutputNode.cpp  ImageOutputNode.h  PreviewNode.cpp  PreviewNode.h
src/Vision/Nodes/: CannyEdgeNode.h  GrayscaleNode.cpp  GrayscaleNode.h  ThresholdNode.cpp  ThresholdNode.h
src/VisionCraftApp/: CMakeLists.txt  VisionCraftApp.cpp  VisionCraftAppLayer.cpp  VisionCraftAppLayer.h  VisionCraftApplication.cpp  VisionCraftApplication.h  VisionCraftGUI.cpp
src/VisionCraftApp/Canvas/: CanvasController.cpp
src/VisionCraftApp/Commands/: Command.h  CommandHistory.cpp  CommandHistory.h  ConnectionCommands.cpp  ConnectionCommands.h  NodeCommands.cpp  NodeCommands.h
src/VisionCraftApp/Connections/: ConnectionManager.cpp  ConnectionManager.h
src/VisionCraftApp/Editor/: ClipboardManager.cpp  ClipboardManager.h  NodeEditorConstants.h  NodeFactory.cpp
src/VisionCraftApp/Events/: FileOpenedEvent.h  GraphExecuteEvent.h  LoadGraphEvent.h  NewGraphEvent.h  SaveGraphEvent.h
src/VisionCraftApp/Input/: InputHandler.cpp  InputHandler.h
src/VisionCraftApp/Layers/: CanvasController.cpp  CanvasController.h  CanvasLayer.cpp  CanvasLayer.h  ConnectionManager.cpp  ConnectionManager.h  ContextMenuRenderer.cpp  ContextMenuRenderer.h  DefaultNodeRenderingStrategy.cpp  DefaultNodeRenderingStrategy.h  DockSpaceLayer.cpp  DockSpaceLayer.h  FileDialogManager.cpp  FileDialogManager.h  GraphExecutionLayer.cpp  GraphExecutionLayer.h  ImGuiBeginLayer.cpp  ImGuiBeginLayer.h  ImGuiEndLayer.cpp  ImGuiEndLayer.h  ImageInputNodeRenderingStrategy.cpp  ImageInputNodeRenderingStrategy.h  InputHandler.cpp  InputHandler.h  NodeDimensionCalculator.cpp  NodeDimensionCalculator.h  NodeEditorConstants.h  NodeEditorLayer.cpp  NodeEditorLayer.h  NodeEditorTypes.h  NodeFactory.cpp  NodeRenderer.cpp  NodeRenderer.h  NodeRenderingStrategy.h  PreviewNodeRenderingStrategy.cpp  PreviewNodeRenderingStrategy.h  PropertyPanelLayer.cpp  PropertyPanelLayer.h  SelectionManager.cpp  SelectionManager.h
src/VisionCraftApp/Main/: VisionCraftApplication.cpp  VisionCraftApplication.h
src/VisionCraftApp/Persistence/: DockingLayoutHelper.cpp  RecentFilesManager.cpp
src/VisionCraftApp/Rendering/: NodeDimensionCalculator.cpp  NodeDimensionCalculator.h  NodeRenderer.cpp  NodeRenderer.h
src/VisionCraftApp/UI/: ContextMenuRenderer.cpp
src/VisionCraftEngine/: CMakeLists.txt  EngineConstants.h  GrayscaleNode.cpp  GrayscaleNode.h  LoadImageNode.cpp  LoadImageNode.h  Logger.h  Node.cpp  Node.h  NodeData.h  NodeEditor.cpp  NodeEditor.h  NodeFactory.cpp  NodeFactory.h  NodeParameter.cpp  NodeParameter.h  Slot.cpp  Slot.h
src/VisionCraftEngine/Nodes/: CannyEdgeNode.cpp  CannyEdgeNode.h  GrayscaleNode.cpp  GrayscaleNode.h  ImageInputNode.cpp  ImageInputNode.h  ImageOutputNode.cpp  ImageOutputNode.h  LoadImageNode.cpp  LoadImageNode.h  PreviewNode.cpp  PreviewNode.h  ThresholdNode.cpp  ThresholdNode.h
tests/: CMakeLists.txt  TestCommandHistory.cpp  TestConnectionCommands.cpp  TestConversionNodes.cpp  TestFilterNodes.cpp  TestImageNodes.cpp  TestNodeCommands.cpp  TestNodeData.cpp  TestNodeEditor.cpp  TestNodeEditorExecutionFlow.cpp  TestNodeFactory.cpp  TestNodeImplementations.cpp  TestNodeParameter.cpp  TestNodeSearchPalette.cpp  TestNodes.cpp  TestSlot.cpp  TestVisionCraftNodes.cpp
(+24 files in other folders)
